<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- General Strings -->
    <string name="hello">Welcome to Wharton Computing Communications. Please login:</string>
    <string name="app_name">Wharton Computing Communications</string>
    <string name="createEvent">Create New Event</string>
    <string name="showEvent">Show Events</string>
    <string name="showAgenda">Show Agenda</string>

    <string-array name="home_options_array">
        <item>Create New Event</item>
        <item>Show Agenda</item>
        <item>Show Contacts</item>
        <item>Edit Profile</item>
    </string-array>
    
    <!--  Event Strings -->
    <string name="eventWelcome">Event Details</string>
    <string name="submitEvent">Submit Event</string>
    <string name="eventTitle">Event Title:</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    
    <string name="eventDesc">Event Description</string>
    <string name="eventActions">Action Items</string>
    
    <string name="pickAffils">Pick Affiliations</string>
    <string name="pickSys">Pick Affected Systems</string>
    
    <string name="backToHome">Back to Home Screen</string>
    <string name="backToEvent">Back to Event</string>
    
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    
    <string name="severity">Severity</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="pickedAffils">Affiliations:</string>
    <string name="pickedSystems">Systems:</string>
    <string name="type">Maintenance Type</string>
    <string name="emergency">Emergency</string>
    <string name="scheduled">Scheduled</string>

	
    <string name="agendaWelcome">Agenda</string>
    <string name="agendaEventTitle1">Instructure Canvas Maintenance Outage</string>
    <string name="agendaEventStartDate1">2/25/12</string>
    <string name="agendaEventDivider"> - </string>
    <string name="agendaEventEndDate1">2/27/12</string>
    <string name="agendaEventDescription1">Calendar section needs to be reworked, so 
        maintenance will be performed this weekend.</string>
    <string name="agendaEventActionItem1">- Inform Canvas users of outage</string>
    <string name="agendaEventActionItem2">- Oversee maintenance internally</string>
    <string name="agendaEventActionItem3"> - Deadline by 12:00am 2/27/12</string>
    <!-- string name="agendaEventTitle1">Instrcutrure Canvas Maintenace Outage</string>
    <string name="agendaEventTitle1">Instrcutrure Canvas Maintenace Outage</string>
    <string name="agendaEventTitle1">Instrcutrure Canvas Maintenace Outage</string>
    <string name="agendaEventTitle1">Instrcutrure Canvas Maintenace Outage</string>
    <string name="agendaEventTitle1">Instrcutrure Canvas Maintenace Outage</string-->


    <string name="defaultTitle">This is the Default Event Title</string>
    <string name="defaultDescText">This is the Default Event Description.</string>
    <string name="defaultActionsText">This is the Default Action Text</string>
    <string name="messageList">MESSAGES AND UPDATES:</string>
    <string name="newMessageBut">New Message</string>
    <string name="postMessageBut">Post Message</string>
    
    <string name="dummyMes1">Wharton listservs are down. URGENT! Responsible 
        people please respond ASAP.</string>
    <string name="dummyMes2">Took care of the first part.</string>
    <string name="dummyMes3">Everything seems to be fixed now.</string>
        
    <string name="postCommentBut">Post Comment</string>
    <string name="comment1">Only on AirPennNet or total outage??</string>
    <string name="comment2">Seems to be a complete outage.</string>
    <string name="comment3">Any other systems down?</string>
    <string name="comment4">No, just came back up. Everything seems to be fixed now.</string>
    
            
</resources>