<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
   <Button 
        android:id="@+id/eventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEvent"
        android:onClick="onCreateEventClick" />
    
   <Button 
        android:id="@+id/showEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showEvent"
        android:onClick="onShowEventClick" />
    </LinearLayout>
    
       <Button 
        android:id="@+id/showAgendaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showAgenda"
        android:onClick="onShowAgenda" />

</LinearLayout>