<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" > -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="12sp" >

        <TextView
            android:id="@+id/eventTitleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/eventWelcome"
            android:textSize="23.0sp"
            android:textStyle="bold" />

        <!--
    <TextView
 		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/eventDesc"
   		android:textSize="15.0sp" />
        -->

        <TextView
            android:id="@+id/eventDescText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--
   <TextView
 		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/eventActions"
   		android:textSize="15.0sp" />
   		
   		
   	<TextView
   	    android:id="@+id/eventActionsText"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"/> 
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/startDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startDate" />

            <TextView
                android:id="@+id/startDateDisplay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/endDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endDate" />

            <TextView
                android:id="@+id/endDateDisplay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type" />

            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pickedAffils" />

            <TextView
                android:id="@+id/affilsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pickedSystems" />

            <TextView
                android:id="@+id/systemsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToContact1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/contact1"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/personText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToContact2"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/contact2"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/personText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/severity"
            android:textSize="15.0sp" />

        <TextView
            android:id="@+id/severityText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!--
    <Button 
        android:id="@+id/eventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToHome"
        android:onClick="onBackToAgendaClick" />
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6sp"
                android:text="@string/messageList"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/newMessageText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="7.0"
                android:inputType="text" />

            <Button
                android:id="@+id/newMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPostClick"
                android:text="@string/postMessageBut" />
        </LinearLayout>

        <ListView
            android:id="@+id/messagesList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="7sp" />
        
        <LinearLayout
            android:id="@+id/messagesPane"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7sp" >
        </LinearLayout>
    </LinearLayout>

<!-- </ScrollView> -->